--- a/editor.html
+++ b/editor.html
@@ -10,10 +10,8 @@ License: Apache 2.0
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-        <script src="./web.js"></script>
-        <link href="./main.css" type="text/css" rel="stylesheet" media="all" />
+        <script src="./web.min.js"></script>
+        <link href="./main.min.css" type="text/css" rel="stylesheet" media="all" />
         <title>Project Editor &middot; ElementNetwork&trade;</title>
     </head>
     <body>
